# barnes-hut

./: CMakeLists.txt  README.md  pyproject.toml  setup.cfg
include/: kernel.h
python/: benchmark_octree8.py  cv0_pm_treepm_stochastic_cv_compare_z2.py  example_jax_bh_compare.py  example_jax_bh_compare_3d.py  gaussian_sigma_likelihood_bh.py  gaussian_sigma_likelihood_pm_vs_bh.py  jax_sbh.py  jax_sbh_ffi.py  test_jax_custom_vjp_recompute.py  test_jax_ffi_tree_builder.py  test_jax_wrapper.py  treepm_jaxpm_demo.py  unified_force_benchmark.py
python/dynamics/: gaussian_sigma_likelihood_pm_vs_bh.py
python/old_interface/: example.py  sampler.py  source.py
python/sbh_jax_examples/: __init__.py  stochastic_2d.py  stochastic_3d.py
src/: sbh.cpp  sbh_ffi.cu
